# TreeTagSets

./: TreeTagSets.cabal  missingCodes in spanish  stack.yaml
CoreNLP/: DEPcodes.hs  NERcodes.hs
Data/: Utilities.hs
NLP/: Tags.hs
NLP/Corpora/: Brown.hs  Conll.hs  ConllChunks.hs  ConllNER.hs  French.hs  FrenchUD.hs  German.hs  ItalianTinT.hs  RawTags.hs  Spanish.hs  UD.hs
NLP/Models/: Conll.hs
NLP/TagSets/: Brown.hs  Conll.hs  ConllChunks.hs  ConllNER.hs  DEPcodes.hs  French.hs  FrenchUD.hs  German.hs  ItalianTinT.hs  NERcodes.hs  RawTags.hs  Spanish.hs  SpeakerTags.hs  UD.hs
NLP/Types/: Tags.hs
src/CoreNLP/: DEPcodes.hs
src/Data/: Utilities.hs
src/NLP/Corpora/: Conll.hs  ConllNER.hs  French.hs  FrenchUD.hs  ItalianTinT.hs  RawTags.hs  UD.hs
src/NLP/Types/: Tags.hs
tests/: TreeTagSetsTesting.hs
tests/CoreNLP/: DEPcodesTests.hs  NERcodesTests.hs
tests/Data/: UtilitiesTests.hs
tests/NLP/Corpora/: BrownTests.hs  ConllTests.hs  FrenchTests.hs  FrenchUDTests.hs  GermanTests.hs  ItalianTinTTests.hs  SpanishTests.hs  UDTests.hs
tests/NLP/TagSets/: BrownTests.hs  ConllTests.hs  DEPcodesTests.hs  FrenchTests.hs  FrenchUDTests.hs  GermanTests.hs  ItalianTinTTests.hs  NERcodesTests.hs  RawTagsTests.hs  SpanishTests.hs  SpeakerTagsTests.hs  UDTests.hs
