name: TreeTagSets
version: 0.0.3.8.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis: a collection of TreeTags
description: tree tag and other codes for the Stanford coreNLP 0.3.8(and older codes)


author: Andrew U. Frank

library
    build-depends:
        base >=4.8 && <= 5
--        network-uri,
--        monads-tf,
        , HTF
--        bytestring,
--        text, utf8-string,
        -- for testing
        , test-invariant
        , cereal
        , cereal-text
        , text
        , QuickCheck
        , quickcheck-instances
        , quickcheck-text
        , containers
        , safe
        , aeson
--        numeric-prelude,
--        snap-core,
--        safe,
--        vector,
--        -- fay-base,
--        split,
--        data-easy
        , uniform-algebras
--        ,uniform-strings

    exposed-modules:
        NLP.TagSets.Brown
        NLP.TagSets.Conll
        NLP.TagSets.UD
        NLP.TagSets.French
        NLP.TagSets.FrenchUD
        NLP.TagSets.German
        NLP.TagSets.Spanish
        NLP.TagSets.ItalianTinT
--        NLP.TagSets.ConllNER  -- is in CoreNLP
        NLP.TagSets.ConllChunks
        NLP.TagSets.RawTags
        NLP.TagSets.NERcodes
        NLP.TagSets.DEPcodes
        Data.Utilities
        NLP.Tags
----                     NLP.Types.General
--        NLP.TagSets.BrownTests
--        NLP.TagSets.ConllTests
    default-language: Haskell2010
    hs-source-dirs: .

--executable main
--    main-is:    NotUsedMain.hs
--    build-depends: base, HTF
--            , TreeTagSets
----        , testExample
----        , uniform-strings
----        , safe
----        -- , test-framework  -- clash with HTF
----        , test-invariant
----        , text
----        , snap-core
----        , network-uri
----        , bytestring
----        , quickcheck-text
--    default-language: Haskell2010
--    hs-source-dirs: src
--    other-modules:
----        StringConversion

Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TreeTagSetsTesting.hs
    build-depends: base, HTF
            , TreeTagSets
            , aeson, aeson-pretty
--            , testExample
--            , uniform-strings
--        , safe
        -- , test-framework
--        , test-invariant
--        , text
--        , snap-core
--        , network-uri
--        , bytestring
--        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: tests

    other-modules:
        Data.UtilitiesTests
        NLP.TagSets.BrownTests
        NLP.TagSets.ConllTests
        NLP.TagSets.UDTests
        NLP.TagSets.FrenchTests
        NLP.TagSets.GermanTests
        NLP.TagSets.SpanishTests
        NLP.TagSets.ItalianTinTTests
        NLP.TagSets.FrenchUDTests
        NLP.TagSets.NERcodesTests
        NLP.TagSets.DEPcodesTests
--        StringConversion
