name: TreeTagSets
version: 0.0.3.9.1
cabal-version: >=1.20
build-type: Simple
license: AllRightsReserved
license-file: LICENSE
synopsis:  NLP Tags for different annotations
description: A collection of the tagsets used 2017, especially the
    tags used by coreNLP annotators for different languages, with a
    minimal set of operations (fromXXtag , toXXtag, unkXXtag).
    The goal is to create a place to collect different tagsets
    and make them available with minimal other imports.
    The different tagsets should be imported, preferably qualified to
    avoid clashes.
    All claseses export Eq, Ord, Show, Read, Generic.
    The unknown value is by default the last value in the enumeration
    (but can be overridden)


author: Andrew U. Frank, using the code from chatter by Rogan Creswick

library
    build-depends:
        base >=4.8 && <= 5
        , text
        , containers

    exposed-modules:
        NLP.TagSets.Brown
        NLP.TagSets.Conll
        NLP.TagSets.UD
        NLP.TagSets.French
        NLP.TagSets.FrenchUD
        NLP.TagSets.German
        NLP.TagSets.Spanish
        NLP.TagSets.ItalianTinT
        NLP.TagSets.RawTags
        NLP.TagSets.NERcodes
        NLP.TagSets.DEPcodes
        Data.Utilities
        NLP.Tags
    default-language: Haskell2010
    hs-source-dirs: .


Test-Suite TestAuto
    type:       exitcode-stdio-1.0
    main-is:    TreeTagSetsTesting.hs
    build-depends: base
            , HTF
            , TreeTagSets
        , QuickCheck
        , quickcheck-instances
        , quickcheck-text
    default-language: Haskell2010
    hs-source-dirs: tests

    other-modules:
        Data.UtilitiesTests
        NLP.TagSets.BrownTests
        NLP.TagSets.ConllTests
        NLP.TagSets.UDTests
        NLP.TagSets.FrenchTests
        NLP.TagSets.GermanTests
        NLP.TagSets.SpanishTests
        NLP.TagSets.ItalianTinTTests
        NLP.TagSets.FrenchUDTests
        NLP.TagSets.NERcodesTests
        NLP.TagSets.DEPcodesTests
